base/awx-ingress.yaml
# ingress-argocd.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: awx-syx6
  namespace: awx-syx6
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/backend-protocol: "HTTP"
    alb.ingress.kubernetes.io/ssl-passthrough: "false"
    nginx.ingress.kubernetes.io/force-ssl-redirect: "false"
    nginx.org/mergeable-ingress-type: "minion"

spec:
  rules:
  - host: nova3.pirate-it.ch
    http:
      paths:
      - pathType: Prefix
        path: /awx
        backend:
          service:
            name: awx-syx6-service
            port:
              number: 80
